--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,26 @@
 annotated-types==0.7.0
 anyio==4.11.0
+click==8.3.0
+colorama==0.4.6
 fastapi==0.119.1
 graphql-core==3.2.6
+h11==0.16.0
+httptools==0.7.1
 idna==3.11
 lia-web==0.2.3
 packaging==25.0
 pydantic==2.12.3
 pydantic_core==2.41.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 python-multipart==0.0.20
+PyYAML==6.0.3
 six==1.17.0
 sniffio==1.3.1
 starlette==0.48.0
 strawberry-graphql==0.284.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+uvicorn==0.38.0
+watchfiles==1.1.1
+websockets==15.0.1
